--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+# package directories
+node_modules
+jspm_packages
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+
 /.pnp
 .pnp.js
 
